View Issue Details

IDProjectCategoryView StatusLast Update
0024136Open CASCADEOCCT:DRAWpublic2013-12-19 13:57
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024136: Mouse move events from inactive Draw Harness window should not be processed on active window
DescriptionCurrent mouse move handling behavior may confuse user.
TagsNo tags attached.
Test case numberNot needed

Activities

kgv

2013-08-29 21:22

developer   ~0025416

Patch is ready for review in CR24136 branch.

san

2013-08-30 17:11

developer   ~0025422

Branch CR24136 reviewed without remarks, ready for testing.

mkv

2013-09-04 17:04

tester   ~0025453

Dear BugMaster,

Branch CR24136 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 8ecb760762f856b6a61f1d0433e73870e3e5d882

Number of compiler warnings:

occt component :
Linux: 781 (781 on master)
Windows: 386 (386 on master)

products component :
Linux: 188 (191 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 363258436 / 363606048
Total CPU difference: 43080.50000000105 / 42445.34000000113

Testing on Windows:
Total MEMORY difference: 427798880 / 429726228
Total CPU difference: 38595.4375 / 31256.453125

There are not differences in images found by testdiff.

Related Changesets

occt: master 08398024

2013-08-29 17:22:00

kgv


Committer: bugmaster Details Diff
0024136: Mouse move events from inactive Draw Harness window should not be processed on active window Affected Issues
0024136
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2013-08-29 21:14 kgv New Issue
2013-08-29 21:14 kgv Assigned To => kgv
2013-08-29 21:22 kgv Note Added: 0025416
2013-08-29 21:22 kgv Assigned To kgv => san
2013-08-29 21:22 kgv Status new => resolved
2013-08-30 17:11 san Note Added: 0025422
2013-08-30 17:11 san Assigned To san => bugmaster
2013-08-30 17:11 san Status resolved => reviewed
2013-08-30 18:48 mkv Assigned To bugmaster => mkv
2013-09-04 17:04 mkv Note Added: 0025453
2013-09-04 17:05 mkv Test case number => Not needed
2013-09-04 17:05 mkv Assigned To mkv => bugmaster
2013-09-04 17:05 mkv Status reviewed => tested
2013-09-06 14:36 bugmaster Changeset attached => occt master 08398024
2013-09-06 14:36 bugmaster Status tested => verified
2013-09-06 14:36 bugmaster Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0