0024136: Mouse move events from inactive Draw Harness window should not be processed on active window